# cgintro_animation_project

./: .gitignore  .gitmodules
doc/: doc.html  doc.md
experiments/: samples.py
project/: CMakeLists.txt
project/assets/models/: cone.mtl  coral2.mtl  coral_2d_formation.mtl  coral_3d_formation.mtl  fisch.mtl  ground.mtl  rock.mtl  rock_formation.mtl  rust.dds  ship.mtl  sphere.mtl  texturedCube.mtl  viking.mtl  wooden_watch_tower2.mtl
project/assets/shaders/: boids.comp  boids.vert  forward_boids.frag  forward_boids.vert  forward_model.frag  forward_model.vert  frag.glsl  main.frag  main.vert  shadow_boids.vert  shadow_model.vert  sphere_cloud.vert  texture.frag  texture.vert
project/src/: Application.cpp  Application.h  Boids.cpp  Boids.h  BoidsSimulationParameters.cpp  BoidsSimulationParameters.h  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  CameraController.cpp  CameraController.h  CollisionEnvironment.cpp  CollisionEnvironment.h  Helper.cpp  Helper.h  Light.cpp  Light.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Name.h  ObjLoader.cpp  ObjLoader.h  Prototypes.h  RenderNode.cpp  RenderNode.h  SamplePoints.cpp  SamplePoints.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  SimpleMesh.cpp  SimpleMesh.h  SphereCloud.cpp  SphereCloud.h  (+11 more)
proposals/: UnderWater World (initial draft).md  Underwater World.md
